# simulation-2d-librcsc

./: CMakeLists.txt  Makefile  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
example/: Makefile  Makefile.in
onnxruntime/: README.md
rcsc/: CMakeLists.txt  Makefile  Makefile.in  librcsc_agent.la
rcsc/.libs/: librcsc_agent.lai
rcsc/action/: Makefile  Makefile.in  basic_actions.lo  bhv_before_kick_off.lo  bhv_emergency.lo  bhv_go_to_point_look_ball.cpp  bhv_go_to_point_look_ball.lo  bhv_scan_field.lo  bhv_shoot2008.lo  body_advance_ball2009.lo  body_clear_ball2009.lo  body_dribble2008.lo  body_go_to_point2009.cpp  body_go_to_point2009.lo  body_go_to_point2010.lo  body_go_to_point_dodge.lo  body_hold_ball2008.lo  body_intercept2009.lo  body_kick_collide_with_ball.lo  body_kick_one_step.lo  body_kick_to_relative.lo  body_pass.lo  body_smart_kick.lo  body_stop_ball.lo  body_stop_dash.lo  intention_dribble2008.lo  intention_time_limit_action.lo  kick_table.lo  librcsc_action.la  neck_scan_field.lo  neck_scan_players.lo  neck_turn_to_ball_and_player.lo  neck_turn_to_ball_or_scan.lo  neck_turn_to_goalie_or_scan.lo  neck_turn_to_low_conf_teammate.lo  neck_turn_to_player_or_scan.lo  (+2 more)
rcsc/learning_models/: CMakeLists.txt  ball_model.cpp  ball_model.h  onnx_model.cpp  onnx_model.h
src/: CMakeLists.txt  Makefile  Makefile.in  rcg2csv.cpp  rcg2txt  rcgrenameteam  rcgresultprinter  rcgreverse  rcgverconv  rcgversion  rclmscheduler  rclmtableprinter
(+174 files in other folders)
